--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <source src="Time Lapse Video Of Night Sky.mp4" type="video/mp4">
             </video>
             <nav>
-                <img src="logo.paa.jpeg" alt="i wont show you" class="logo">
+                <img src="utsav mehta.png" alt="i wont show you" class="logo">
                  <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
