--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </nav>
             <div class="header-text">
                 <p class="q1">Traveller And WonderLUST</p>
-                <h1>Hi, This is <span>Stony</span><br> from🍁hills </h1>
+                <h1>Hi, This is <span>Utsav</span><br> from hills of Uttrakhand</h1>
                   </div>
         </div>
     </div>
