--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  <!-- <i class="fa-solid fa-bars" onclick="openmenu()"></i> -->
             </nav>
             <div class="header-text">
-                <p class="q1">Traveller And WonderLUST</p>
+                <p class="q1">FullStack Developer</p>
                 <h1>Hi, This is <span>Utsav</span><br> from hills of Uttrakhand</h1>
                   </div>
         </div>
