--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1>About Me</h1>
-                    <p>This is <strong>Utsav Mehta</strong>, a Frontend <b>Developer</b>. This world is all about being productive. Carrying my skills on this technical journey, I'm on my way to reaching milestones step by step.</p>
+                    <p> Hi, I'm <strong>Utsav Mehta</strong>, a <b>Software Engineer and Full Stack Developer</b>. With a strong foundation in <b>Java, Spring Boot, and MERN stack</b>, I thrive on building robust and scalable web applications.various modern technologies, enabling me to create seamless and impactful solutions. Let's connect and push the boundaries of technology together! </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
