--- a/index.html
+++ b/index.html
@@ -53,10 +53,18 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>HTML</span><br>Website Sculpture Designing</li>
-                            <li><span>CSS</span><br>Frontend Website Decoration</li>
-                            <li><span>Cyber Security</span><br>Cyber Awareness Motivator, Cyber Vulnerability Enthusiast</li>
-                        </ul>
+                            <ul>
+    <li><span>Java</span><br>Robust Backend Development</li>
+    <li><span>Spring Boot</span><br>Scalable Microservices</li>
+    <li><span>ReactJS</span><br>Dynamic Frontend Creation</li>
+    <li><span>Tailwind CSS</span><br>Modern UI Design</li>
+    <li><span>Appwrite</span><br>Efficient Backend as a Service</li>
+    <li><span>Cyber Security</span><br>Awareness and Vulnerability Management</li>
+    <li><span>Software Testing</span><br>Comprehensive Testing and Quality Assurance</li>
+    <li><span>REST API</span><br>Building and Integrating APIs</li>
+    <li><span>Blockchain</span><br>Innovative Solutions with Blockchain Technology</li>
+</ul>
+ </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
