--- a/index.html
+++ b/index.html
@@ -53,17 +53,20 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <ul>
-    <li><span>Java</span><br>Robust Backend Development</li>
-    <li><span>Spring Boot</span><br>Scalable Microservices</li>
-    <li><span>ReactJS</span><br>Dynamic Frontend Creation</li>
-    <li><span>Tailwind CSS</span><br>Modern UI Design</li>
-    <li><span>Appwrite</span><br>Efficient Backend as a Service</li>
-    <li><span>Cyber Security</span><br>Awareness and Vulnerability Management</li>
-    <li><span>Software Testing</span><br>Comprehensive Testing and Quality Assurance</li>
-    <li><span>REST API</span><br>Building and Integrating APIs</li>
-    <li><span>Blockchain</span><br>Innovative Solutions with Blockchain Technology</li>
+                            
+   <ul>
+    <li><span>Java</span><br>Robust Backend Development with a focus on creating scalable and efficient systems, honed through hands-on experience.</li>
+    <li><span>Spring Boot</span><br>Expertise in developing microservices and enterprise-level applications, leveraging the power of Spring Boot for optimal performance.</li>
+    <li><span>ReactJS</span><br>Skilled in crafting dynamic and responsive front-end interfaces, ensuring a seamless user experience.</li>
+    <li><span>Tailwind CSS</span><br>Creating modern and visually appealing user interfaces with Tailwind CSS, enhancing the aesthetic and functionality of web projects.</li>
+    <li><span>Appwrite</span><br>Proficient in implementing backend services using Appwrite, streamlining server-side operations for web and mobile applications.</li>
+    <li><span>Cyber Security</span><br>Dedicated to promoting cyber awareness and managing vulnerabilities, ensuring robust security measures in all projects.</li>
+    <li><span>Software Testing</span><br>Comprehensive testing and quality assurance to deliver reliable and high-quality software solutions.</li>
+    <li><span>REST API</span><br>Expert in building and integrating RESTful APIs, facilitating seamless communication between front-end and back-end systems.</li>
+    <li><span>Blockchain</span><br>Innovating with blockchain technology to create secure and decentralized solutions, pushing the boundaries of modern tech.</li>
 </ul>
+
+
  </ul>
                     </div>
                     <div class="tab-contents" id="experience">
