--- a/index.html
+++ b/index.html
@@ -70,15 +70,22 @@
  </ul>
                     </div>
                     <div class="tab-contents" id="experience">
-                        <ul>
-                            <li><span>No Experience Yet</span><br>Looking for Opportunities</li>
-                        </ul>
-                    </div>
-                    <div class="tab-contents" id="education">
-                        <ul>
-                            <li><span>2020-Current</span><br>B.Tech CSE at LPU, Punjab</li>
-                        </ul>
-                    </div>
+    <ul>
+        <li><span>SDE Intern @ ITJobxs (April 2024 – Present)</span><br>
+            - Designed and developed a fully responsive web page, increasing user engagement by 15%.<br>
+            - Addressed user verification and authentication challenges, reducing fake bots and posts by 50%.<br>
+            - Integrated Google Recaptcha, improving website security accuracy by 40%.</li>
+    </ul>
+</div>
+
+                   <div class="tab-contents" id="education">
+    <ul>
+        <li><span>2020-Current</span><br>B.Tech in Computer Science Engineering, Lovely Professional University, Punjab - CGPA: 8.414</li>
+        <li><span>2020</span><br>Higher Secondary, Persistent Students Nes HR SEC School, Nainital, Uttrakhand - 80.8%</li>
+        <li><span>2018</span><br>Secondary, Mallikarjun School, Aincholi, Pithoragarh, Uttrakhand - CGPA: 10</li>
+    </ul>
+</div>
+
                 </div>
             </div>
         </div>
