--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     <li><span>ReactJS</span><br>Skilled in crafting dynamic and responsive front-end interfaces, ensuring a seamless user experience.</li>
     <li><span>Tailwind CSS</span><br>Creating modern and visually appealing user interfaces with Tailwind CSS, enhancing the aesthetic and functionality of web projects.</li>
     <li><span>Appwrite</span><br>Proficient in implementing backend services using Appwrite, streamlining server-side operations for web and mobile applications.</li>
-    <li><span>Cyber Security</span><br>Dedicated to promoting cyber awareness and managing vulnerabilities, ensuring robust security measures in all projects.</li>
     <li><span>Software Testing</span><br>Comprehensive testing and quality assurance to deliver reliable and high-quality software solutions.</li>
     <li><span>REST API</span><br>Expert in building and integrating RESTful APIs, facilitating seamless communication between front-end and back-end systems.</li>
     <li><span>Blockchain</span><br>Innovating with blockchain technology to create secure and decentralized solutions, pushing the boundaries of modern tech.</li>
@@ -92,31 +91,45 @@
     </section>
 
     <!-- Services Section -->
-    <section id="services">
-        <div class="container">
-            <h1 class="sub-title">My Services</h1>
-            <div class="services-list">
-                <div>
-                    <i class="fa fa-user-secret"></i>
-                    <h2>Social Engineering</h2>
-                    <p>Social engineering involves acquiring information anonymously about specific individuals.</p>
-                    <a href="#">Learn more</a>
-                </div>
-                <div>
-                    <i class="fa fa-shield-halved"></i>
-                    <h2>Firewall Analyst</h2>
-                    <p>Preventing cybercrimes by securing systems through firewalls to ensure smooth operations.</p>
-                    <a href="#">Learn more</a>
-                </div>
-                <div>
-                    <i class="fa fa-code"></i>
-                    <h2>Frontend Developer</h2>
-                    <p>Styling websites using CSS and HTML; a fun and creative way to enhance web design.</p>
-                    <a href="#">Learn more</a>
-                </div>
+    <!-- Services Section -->
+<section id="services">
+    <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <i class="fa fa-code"></i>
+                <h2>Full Stack Development</h2>
+                <p>Crafting dynamic and responsive web applications using Java, Spring Boot, HTML, CSS, JavaScript, and ReactJS for an engaging user experience.</p>
+                <a href="#">Learn more</a>
+            </div>
+            <div>
+                <i class="fa fa-laptop-code"></i>
+                <h2>MERN Stack Development</h2>
+                <p>Building robust web applications with MongoDB, ExpressJS, ReactJS, and NodeJS, ensuring seamless integration and performance.</p>
+                <a href="#">Learn more</a>
+            </div>
+            <div>
+                <i class="fa fa-cogs"></i>
+                <h2>Software Development Engineer (SDE)</h2>
+                <p>Developing efficient and scalable software solutions, leveraging modern technologies and methodologies for optimal performance.</p>
+                <a href="#">Learn more</a>
+            </div>
+            <div>
+                <i class="fa fa-shield-alt"></i>
+                <h2>Cybersecurity</h2>
+                <p>Implementing comprehensive cybersecurity strategies to protect against vulnerabilities and enhance digital security.</p>
+                <a href="#">Learn more</a>
+            </div>
+            <div>
+                <i class="fa fa-blockchain"></i>
+                <h2>Blockchain Development</h2>
+                <p>Innovating with blockchain technology to create secure and decentralized solutions, pushing the boundaries of modern tech.</p>
+                <a href="#">Learn more</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Portfolio Section -->
     <section id="portfolio">
