--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <a href="#">Learn more</a>
             </div>
             <div>
-                <i class="fa fa-blockchain"></i>
+                <i class="fa-brands fa-hive" style="color: #ccc4e4;"></i>
                 <h2>Blockchain Development</h2>
                 <p>Innovating with blockchain technology to create secure and decentralized solutions, pushing the boundaries of modern tech.</p>
                 <a href="#">Learn more</a>
