--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="4425949_2411.jpg" alt="Karate">
+                    <img src="Montserrat.png" alt="Vibenet!">
                     <div class="layer">
-                        <h3>Sho-To Kan Karate</h3>
-                        <p>University sports scholarship holder, KFI since 2018.</p>
-                        <i class="fa fa-arrow-up-right-from-square"></i>
+                        <h3>Social Media App</h3>
+                        <p>Developed a  socail media platform for enhanced connectivity and communication.</p>
+                         <i class="fa-solid fa-ghost" style="color: #B197FC;"></i>
                     </div>
                 </div>
                 <div class="work">
@@ -152,7 +152,7 @@
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>Building a seamless user experience through a modern web app.</p>
-                        <i class="fa fa-arrow-up-right-from-square"></i>
+                        <i class="fa-solid fa-ghost" style="color: #B197FC;"></i>
                     </div>
                 </div>
             </div>
