--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <i class="fa fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p class="q1">Frontend Developer</p>
+                <p class="q1">Fullstack Developer</p>
                 <h1>Hi, This is <span>Utsav Mehta</span><br> AKA 🗡️Samurai⌨️CODER</h1>
             </div>
         </div>
