--- a/index.html
+++ b/index.html
@@ -67,15 +67,18 @@
 
 
  </ul>
-                    </div>
-                    <div class="tab-contents" id="experience">
+                   <div class="tab-contents" id="experience">
     <ul>
         <li><span>SDE Intern @ ITJobxs (April 2024 – Present)</span><br>
             - Designed and developed a fully responsive web page, increasing user engagement by 15%.<br>
             - Addressed user verification and authentication challenges, reducing fake bots and posts by 50%.<br>
             - Integrated Google Recaptcha, improving website security accuracy by 40%.</li>
+        <li><span>C# Developer @ Z Melon Technology Company (September 2024 – Present)</span><br>
+            - Working on a project that helps people learn dance.<br>
+            - Responsible for backend technology development and implementation.</li>
     </ul>
 </div>
+
 
                    <div class="tab-contents" id="education">
     <ul>
