--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <source src="Time Lapse Video Of Night Sky.mp4" type="video/mp4">
             </video>
             <nav>
-                <img src="Utav Mehta.jpg" alt="Logo" class="logo">
+                <img src="" alt="Logo" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
